Added table for percentage of cells with no nucleoid

--- a/Notebooks/3_Mutants/Sytox_data.ipynb
+++ b/Notebooks/3_Mutants/Sytox_data.ipynb
@@ -18,10 +18,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset 240424_1 (group WT, 0): loaded objects ['Bacteria_large', 'RecB_spots', 'RecB_raw', 'Nucleoid']\n",
-      "Dataset 240424_2 (group WT, 30 ng/mL): loaded objects ['Bacteria_large', 'RecB_spots', 'RecB_raw', 'Nucleoid']\n",
-      "Dataset 240424_3 (group ΔrecA, 0): loaded objects ['Bacteria_large', 'RecB_spots', 'RecB_raw', 'Nucleoid']\n",
-      "Dataset 240424_4 (group ΔrecA, 30 ng/mL): loaded objects ['Bacteria_large', 'RecB_spots', 'RecB_raw', 'Nucleoid']\n"
+      "Dataset 240424_1: loaded objects ['Bacteria_large', 'RecB_spots', 'RecB_raw', 'Nucleoid']\n",
+      "Dataset 240424_2: loaded objects ['Bacteria_large', 'RecB_spots', 'RecB_raw', 'Nucleoid']\n",
+      "Dataset 240424_3: loaded objects ['Bacteria_large', 'RecB_spots', 'RecB_raw', 'Nucleoid']\n",
+      "Dataset 240424_4: loaded objects ['Bacteria_large', 'RecB_spots', 'RecB_raw', 'Nucleoid']\n"
      ]
     }
    ],
@@ -29,7 +29,7 @@
     "from pyberries.data import DatasetPool\n",
     "import seaborn.objects as so\n",
     "\n",
-    "data = (DatasetPool(path='/media/daniel/HDD Daniel/DanielThedie/BACMMAN/Timelapse',\n",
+    "data = (DatasetPool(path='D:\\Daniel\\BACMMAN\\Timelapse',\n",
     "                    dsList=['240424_1', '240424_2', '240424_3', '240424_4'],\n",
     "                    groups=['WT, 0', 'WT, 30 ng/mL', 'ΔrecA, 0', 'ΔrecA, 30 ng/mL'],\n",
     "                    metadata='DateTime'\n",
@@ -322,7 +322,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Cells with no nucleoid</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Strain</th>\n",
+       "      <th>Cipro</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">WT</th>\n",
+       "      <th>0</th>\n",
+       "      <td>0%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30 ng/mL</th>\n",
+       "      <td>3%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">ΔrecA</th>\n",
+       "      <th>0</th>\n",
+       "      <td>5%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30 ng/mL</th>\n",
+       "      <td>2%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Cells with no nucleoid\n",
+       "Strain Cipro                          \n",
+       "WT     0                            0%\n",
+       "       30 ng/mL                     3%\n",
+       "ΔrecA  0                            5%\n",
+       "       30 ng/mL                     2%"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df = (data\n",
+    "      .Bacteria_large\n",
+    "      .assign(no_nucleoid=lambda df: df.NucleoidCount.eq(0).astype('int')*100,\n",
+    "              )\n",
+    "      .groupby(['Strain', 'Cipro'])\n",
+    "      .agg({'no_nucleoid':'mean'})\n",
+    "      .assign(no_nucleoid=lambda df: df.no_nucleoid.astype('int').astype('str') + '%')\n",
+    "      .rename(columns={'no_nucleoid':'Cells with no nucleoid'})\n",
+    "      )\n",
+    "\n",
+    "display(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +485,6 @@
    ],
    "source": [
     "df = (data\n",
-    "      .get_parent_indices(object_name='RecB_spots')\n",
     "      .RecB_spots\n",
     "      .assign(spot_in_nucleoid=lambda df: df.ParentNucleoidIndices.notna().astype('int')*100,\n",
     "              long_spot=lambda df: df.TrackLength.ge(5)\n",
@@ -498,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,8 +605,8 @@
     "      .query('Dataset == \"240424_2\" and in_nucleoid == \"No\"')\n",
     "      )\n",
     "\n",
-    "store_selection(df, \n",
-    "                dsPath='D:\\\\DanielThedie\\\\BACMMAN\\\\Timelapse',\n",
+    "store_selection(df,\n",
+    "            #     dsPath='D:\\\\Daniel\\\\BACMMAN\\\\Timelapse',\n",
     "                dsName=\"Timelapse\\\\240424_2\",\n",
     "                objectClassIdx=0,\n",
     "                selectionName='Spot_non_nucleoid',\n",
@@ -686,7 +777,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
