Added titles on overlapping histograms graphs

--- a/Notebooks/3_Mutants/RecB_dissociation.ipynb
+++ b/Notebooks/3_Mutants/RecB_dissociation.ipynb
@@ -1505,23 +1505,21 @@
     "\n",
     "# Initialize the FacetGrid object\n",
     "g = sns.FacetGrid(df, row=\"Time_min_bin\", col='Group', hue=\"Group\", aspect=6, height=.5, palette=['cornflowerblue', 'sandybrown', 'firebrick', 'mediumorchid'])\n",
-    "\n",
-    "# Draw the densities in a few steps\n",
     "g.map(sns.kdeplot, \"midCellDist\",\n",
     "      bw_adjust=1.5, clip_on=False,\n",
     "      fill=True, alpha=1, linewidth=1.5)\n",
     "g.map(sns.kdeplot, \"midCellDist\", clip_on=False, color=\"w\", lw=2, bw_adjust=1.5)\n",
-    "\n",
-    "# passing color=None to refline() uses the hue mapping\n",
     "g.refline(y=0, linewidth=2, linestyle=\"-\", color=None, clip_on=False)\n",
     "\n",
-    "# Define and use a simple function to label the plot in axes coordinates\n",
-    "def label(x, color, label):\n",
-    "    ax = plt.gca()\n",
-    "    ax.text(0, .2, label, fontweight=\"bold\", color=color,\n",
-    "            ha=\"left\", va=\"center\", transform=ax.transAxes)\n",
+    "def label(row, color, label):\n",
+    "      ax = plt.gca()\n",
+    "      ax.text(0, .2, row.iloc[0], fontweight=\"bold\", color=color,\n",
+    "              ha=\"left\", va=\"center\", transform=ax.transAxes)\n",
+    "      if row.iloc[0] == 15.0:\n",
+    "            ax.text(.5, 1.2, label, color='k',\n",
+    "                  ha=\"center\", va=\"center\", transform=ax.transAxes)\n",
     "\n",
-    "# g.map(label, \"midCellDist\")\n",
+    "g.map(label, 'Time_min_bin')\n",
     "\n",
     "# Set the subplots to overlap\n",
     "g.figure.subplots_adjust(hspace=-.25)\n",
@@ -1530,6 +1528,8 @@
     "g.set_titles(\"\")\n",
     "g.set(yticks=[], ylabel=\"\", xlabel='Distance from mid-cell\\n(normalised)')\n",
     "g.despine(bottom=True, left=True)\n",
+    "g.fig.supylabel('Time (min)', x=.1, y=.4)\n",
+    "plt.show()\n",
     "\n",
     "# plt.savefig(fname='D:\\\\DanielThedie\\\\Figures\\\\RecB_article_figures\\\\4_Mutants\\\\RecB_position.svg', format='svg', bbox_inches='tight')"
    ]
@@ -1551,7 +1551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
