Minor code cosmetic improvement

--- a/Notebooks/3_Mutants/RecB_dissociation.ipynb
+++ b/Notebooks/3_Mutants/RecB_dissociation.ipynb
@@ -1523,12 +1523,12 @@
     "\n",
     "# Set the subplots to overlap\n",
     "g.figure.subplots_adjust(hspace=-.25)\n",
+    "g.figure.supylabel('Time (min)', x=.1, y=.4)\n",
     "\n",
     "# Remove axes details that don't play well with overlap\n",
     "g.set_titles(\"\")\n",
     "g.set(yticks=[], ylabel=\"\", xlabel='Distance from mid-cell\\n(normalised)')\n",
     "g.despine(bottom=True, left=True)\n",
-    "g.fig.supylabel('Time (min)', x=.1, y=.4)\n",
     "plt.show()\n",
     "\n",
     "# plt.savefig(fname='D:\\\\DanielThedie\\\\Figures\\\\RecB_article_figures\\\\4_Mutants\\\\RecB_position.svg', format='svg', bbox_inches='tight')"
