--- a/Notebooks/3_Mutants/Sytox_data.ipynb
+++ b/Notebooks/3_Mutants/Sytox_data.ipynb
@@ -157,12 +157,12 @@
     "\n",
     "# Set the subplots to overlap\n",
     "g.figure.subplots_adjust(hspace=-.3)\n",
+    "g.figure.supylabel('Time (min)', x=.1, y=.4)\n",
     "\n",
     "# Remove axes details that don't play well with overlap\n",
     "g.set_titles(\"\")\n",
     "g.set(yticks=[], ylabel=\"\", xlabel='Fraction of the cell\\noccupied by nucleoid', xlim=(-0.1,0.75))\n",
     "g.despine(bottom=True, left=True)\n",
-    "g.fig.supylabel('Time (min)', x=.1, y=.4)\n",
     "plt.show()"
    ]
   },
@@ -687,12 +687,12 @@
     "\n",
     "# Set the subplots to overlap\n",
     "g.figure.subplots_adjust(hspace=-.25)\n",
+    "g.figure.supylabel('Time (min)', x=.1, y=.4)\n",
     "\n",
     "# Remove axes details that don't play well with overlap\n",
     "g.set_titles(\"\")\n",
     "g.set(yticks=[], ylabel=\"\", xlabel='Distance from mid-cell\\n(normalised)')\n",
     "g.despine(bottom=True, left=True)\n",
-    "g.fig.supylabel('Time (min)', x=.1, y=.4)\n",
     "plt.show()"
    ]
   },
