--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -116,6 +116,15 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \label{SIFig:Gam_cell_length}
 \end{suppfigure*}
 
+% Bi-exponential fit of RecB spot lifetimes under Gam over-expression, 0 and 30 ng/mL cipro
+\begin{suppfigure*}[htbp]
+    \begin{center}
+    \includegraphics[width=\linewidth]{SI_Figures/Gam_lifetimes_fits.pdf}
+    \end{center}
+    \caption{Histograms of RecB spot lifetime (bars) in cells over-expressing the Gam protein with overlaid bi-exponential decay fits ($y=a_1.e^{-k_1.t} + a_2.e^{-k_2.t}$, black line) and individual fit components (dashed lines).}
+    \label{SIFig:Gam_RecB_lifetimes_fits}
+\end{suppfigure*}
+
 % Photobleaching figure (curves + fitted rates)
 \begin{suppfigure*}[htbp]
 \begin{center}
