Outline for nucleoid section

--- a/Results.tex
+++ b/Results.tex
@@ -88,11 +88,8 @@ To further characterise the long-lived DNA binding events, we defined a spot lif
 
 %% At high cipro (above MIC, 20-30 ng/mL) we see a strong accumulation of long-lived RecB spots in the cell
 %% Moreover these spots are centred in the cell (consistent with SOS/RecN-induced chromosome compaction)
+%% TO BE CHANGED
 Upon exposure to the highest cipro\-floxacin concentration (30 ng/mL), the number of long-lived DNA-bound RecB increased (Figure \ref{Fig:high_cipro}A). This hints at an accumulation of repair intermediates in cells that are exposed to large amounts of DNA damage. Furthermore, whereas at low ciprofloxacin concentrations (0, 3, 10 ng/mL) RecB spots were found throughout the cell, at higher concentrations (20, 30 ng/mL) they appeared more centred in the cell (Figure \ref{Fig:high_cipro}B).
-
-%% To understand this we imaged the bacterial nucleoid with Sytox
-%% It appears the nucleoid is centred (but not compacted) upon cipro addition
-This is consistent with RecN-dependent, SOS-induced compaction of the bacterial chromosome upon DNA damage, as has been previously reported\cite{Odsbu2014}.
 
 %% We also see a strong accumulation of RecA filaments (RecA foci seem to be transient and their number decreases over time)
 Simultaneously with the increase in the number of long-lived DNA-bound RecB, RecA filaments became visible in a large number of cells at the higher ciprofloxacin concentrations (Figure \ref{Fig:high_cipro}C). Although the proportion of cells that contained RecA filaments was initially low under all ciprofloxacin concentrations ($<$20\%), after one hour of exposure the proportion of cells that contained a RecA filament had increased to $\sim$40\% at 20 ng/mL ciprofloxacin, and $\sim$60\% at 30 ng/mL (Figure \ref{Fig:high_cipro}D). RecA foci on the other hand seemed to form quickly following ciprofloxacin exposure (present in $\sim$40\% of the cells after 15 min of exposure to 30 ng/mL ciprofloxacin) and come back to endogenous damage level after $\sim$1 hour. Taken together, these results show that RecA foci are transient structures in the repair process that do not accumulate under high DNA damage, whereas RecA filaments do accumulate, presumably when the homologous sequence cannot be found.
@@ -101,6 +98,23 @@ Simultaneously with the increase in the number of long-lived DNA-bound RecB, Rec
 %% 1. Sub-lethal cipro concentrations, where repair structures are formed then disappear as damage gets repaired
 %% 2. Lethal concentrations of cipro, where repair structures are formed and accumulate over time while the cell fails to repair its DNA
 We observe two regimes of DNA repair after ciprofloxacin exposure. At sub-MIC ciprofloxacin concentrations (0, 3, 10 ng/mL), repair structures such as RecB spots and RecA filaments form transiently and disappear as the damage gets repaired. At higher ciprofloxacin concentrations (20, 30 ng/mL), the DNA damage caused is more extensive, and repair structures are formed and accumulate over time while the cell fails to repair its DNA, ultimately leading to cell death.
+
+% Part 4: Nucleoid centring upon ciprofloxacin exposure
+\subsection*{Ciprofloxacin induces centring of the bacterial nucleoid}
+
+\begin{figure*}[htbp]
+    \centering
+    \includegraphics[width=.8\textwidth]{Figures/Fig4_nucleoid.pdf}
+    \caption{}
+    \label{Fig:nucleoid}
+\end{figure*}
+
+%% We imaged nucleoid and RecB in the same experiment
+%% We observe the effect of ciprofloxacin exposure on Nucleoid position
+%% (fraction of cell occupied by nucleoid in SI)
+
+%% We correlate Nucleoid and RecB position and find that they are correlated
+%% Interpretation: RecB spot centring is due to nucleoid centring (not obvious: link to DSB rate, explain it happens after several rounds of DSBs)
 
 
 % Part 5: Mutants in the repair pathway
