--- a/Results.tex
+++ b/Results.tex
@@ -38,7 +38,7 @@ To gain more insight into DNA binding by RecB, we induced additional DSBs by add
 %%% They are not well-fitted by a monoexponential decay (SI fig)
 %%% We fit with a bi-exponential decay model
 %%% Mention lifetimes/proportions, in table
-Upon exposure to ciprofloxacin, the RecB spot lifetime histograms contained more long-lived spots. Fitting with a mono-exponential decay model as in Figure \ref{Fig:endogenous}D did not account well for these long-lived spots (Supp. Figure \ref{SIFig:monoexp_fits}), especially at the higher ciprofloxacin concentrations. This suggested that the new long-lived spots that appeared under exposure to ciprofloxacin corresponded to a new population of RecB spots, that had a slower dissociation rate from DNA than the ones observed under endogenous damage. Indeed, fitting with a bi-exponential decay model ($y = a_1.e^{-k_1.t} + a_2.e^{-k_2.t}$) accounted much better for the longer-lived RecB spots (Figure \ref{Fig:lifetime_fits}). The bi-exponential fit outlined two populations of spots, with different lifetimes: a short-lived one, with lifetimes ranging from 1.2 to 1.5 sec, and a longer-lived one, with lifetime between 5 and 10 sec (Table \ref{tab:fit_results}). Even though the short-lived spots always represented a majority of events ($>$ 90\% of the spots), the proportion of long-lived spots tended to increase under higher ciprofloxacin exposure (from 3.4\% $\pm$ 0.9 under 3 ng/mL ciprofloxacin to 7.5\% $\pm$ 2 under 30 ng/mL ciprofloxacin).
+Upon exposure to ciprofloxacin, the RecB spot lifetime histograms contained more long-lived spots. Fitting with a mono-exponential decay model as in Figure \ref{Fig:endogenous}D did not account well for these long-lived spots (Supp. Figure \ref{SIFig:monoexp_fits}), especially at the higher ciprofloxacin concentrations. This suggested that the new long-lived spots that appeared under exposure to ciprofloxacin corresponded to a new population of RecB spots, that had a slower dissociation rate from DNA than the ones observed under endogenous damage. Indeed, fitting with a bi-exponential decay model ($y = a_1.e^{-k_1.t} + a_2.e^{-k_2.t}$) accounted much better for the longer-lived RecB spots (Figure \ref{Fig:lifetime_fits}B). The bi-exponential fit outlined two populations of spots, with different lifetimes: a short-lived one, with lifetimes ranging from 1.2 to 1.5 sec, and a longer-lived one, with lifetime between 5 and 10 sec (Table \ref{tab:fit_results}). Even though the short-lived spots always represented a majority of events ($>$ 90\% of the spots), the proportion of long-lived spots tended to increase under higher ciprofloxacin exposure (from 3.4\% $\pm$ 0.9 under 3 ng/mL ciprofloxacin to 7.5\% $\pm$ 2 under 30 ng/mL ciprofloxacin).
 
 \begin{table}[htbp]
     \centering
@@ -71,13 +71,14 @@ Upon exposure to ciprofloxacin, the RecB spot lifetime histograms contained more
 %%% Short-lived population stays, long-lived one is removed
 %%% Interpretation: because of its size, the RecBCD-Halo-Gam complex can sometimes form spots (SI Note + SI Fig if any), which creates short spots
 %%% Therefore, we are unable to detect short DNA binding events, but we can confidently detect longer DNA binding events
-To determine whether both short- and long-lived spots resulted from RecB binding to DNA, we measured RecB spots lifetime in the presence and absence of ciprofloxacin while over-expressing the Gam protein of phage $\lambda$ from a plasmid. The Gam protein was previously shown to bind in place of DNA on the RecBCD complex\cite{Wilkinson2016}, and its overexpression is expected to abolish RecBCD binding to DNA. Accordingly, cells that over-expressed Gam and were exposed to high ciprofloxacin (30 ng/mL) showed little elongation compared to cells that did not overexpress Gam (Supp. Figure \ref{SIFig:Gam_cell_length}). The resulting RecB spot lifetime histograms showed a near-complete disappearance of the long-lived spots, while short-lived ones were still present (Figure \ref{Fig:lifetime_fits}C). This was confirmed by fitting the histogram with our bi-exponential decay model, which found proportions of long-lived spots ($\sim$3\%) similar to those in wild-type cells that were not exposed to ciprofloxacin (2.6\%, Table \ref{tab:fit_results}). This confirmed that (i) long-lived RecB spots correspond to RecB molecules that have bound to DNA, and (ii) short-lived RecB spots can result from other causes than short-lived DNA binding (Supp. Note \ref{note:spurious_spots} and Supp. Figure \ref{SIFig:displacement_simul}).
+To determine whether both short- and long-lived spots resulted from RecB binding to DNA, we measured RecB spots lifetime in the presence and absence of ciprofloxacin while over-expressing the Gam protein of phage $\lambda$ from a plasmid. The Gam protein was previously shown to bind in place of DNA on the RecBCD complex\cite{Wilkinson2016}, and its overexpression is expected to abolish RecBCD binding to DNA. Accordingly, cells that over-expressed Gam and were exposed to high ciprofloxacin (30 ng/mL) showed little elongation compared to cells that did not overexpress Gam (Supp. Figure \ref{SIFig:Gam_cell_length}). The resulting RecB spot lifetime histograms showed a near-complete disappearance of the long-lived spots, while short-lived ones were still present (Figure \ref{SIFig:Gam_RecB_lifetimes_fits}). This was confirmed by fitting the histogram with our bi-exponential decay model, which found proportions of long-lived spots ($\sim$3\%) similar to those in wild-type cells that were not exposed to ciprofloxacin (2.6\%, Table \ref{tab:fit_results}). This confirmed that (i) long-lived RecB spots correspond to RecB molecules that have bound to DNA, and (ii) short-lived RecB spots can result from other causes than short-lived DNA binding (Supp. Note \ref{note:spurious_spots} and Supp. Figure \ref{SIFig:displacement_simul}). Spots that live only for a few seconds cannot be reliably assigned to one or the other category. However, based on the Gam overexpression data, we determined that any spot with a lifetime over 10 sec had 95\% probability to be DNA-bound (Figure \ref{Fig:lifetime_fits}C).
 
-%% We define a threshold (10 sec) above which no spots are observed in the Gam control (95% confidence). Any spots longer than 10 sec are expected to correspond to a DNA binding event.
-To further characterise the long-lived DNA binding events, we defined a spot lifetime threshold (10 sec), at which 95\% of the RecB spots observed under Gam overexpression are shorter than the threshold (Figure \ref{Fig:lifetime_fits}D).
+%% We use the number of spots and proportion of long-lived spots to estimate the rate of recruitment of RecB on the DNA (Fig 2D)
+%% Mention/link to discussion on relationship between RecB recruitment rate and DSB formation rate
+Whereas the lifetime of the fluorescent spots informs us on how long RecB stays bound to DNA, the rate of appearance of spots helps us estimate the rate of recruitment of RecB to DNA under a certain DNA damage condition. To achieve this, we need to quantify for each timelapse the total number of spots that belong to the "long-lived" (i.e. RecB bound to DNA) category. Since the short- and long-lived populations cannot be clearly separated from the lifetime histograms (Figure \ref{Fig:lifetime_fits}B), we have to take an "ensemble-level" approach. For each dataset, multiplying the total number of spots that appear during the timelapse by the proportion of long-lived spots retrieved from the lifetime histogram fits gives us an estimate of the number of DNA-bound RecB per timelapse (Figure \ref{Fig:lifetime_fits}D). We estimate that under endogenous damage and under low ciprofloxacin concentrations, on average 1 to 2 RecB molecules are recruited to the DNA per hour. This is roughly consistent with the previous estimate of 18\% of cells generating an endogenous DSB per cell cycle\cite{Sinha2018} (see discussion). At ciprofloxacin concentrations above the MIC (30 ng/mL), the recruitment rate increases sharply to an average of 5 RecB recruited to DNA per hour. Furthermore, we expect that this recruitment rate gives a close estimate of the rate of formation of DSBs (see discussion).
 
 % Part 3: There are two regimes of DNA repair for ciprofloxacin-induced damage
-\subsection*{There are two regimes of DNA repair for ciprofloxacin-induced damage}
+\subsection*{There are two regimes of DNA repair for ciprofloxacin-induced damage}  % TITLE TO BE CHANGED
 
 \begin{figure*}[htbp]
     \centering
@@ -91,33 +92,23 @@ To further characterise the long-lived DNA binding events, we defined a spot lif
 %% TO BE CHANGED
 Upon exposure to the highest cipro\-floxacin concentration (30 ng/mL), the number of long-lived DNA-bound RecB increased (Figure \ref{Fig:high_cipro}A). This hints at an accumulation of repair intermediates in cells that are exposed to large amounts of DNA damage. Furthermore, whereas at low ciprofloxacin concentrations (0, 3, 10 ng/mL) RecB spots were found throughout the cell, at higher concentrations (20, 30 ng/mL) they appeared more centred in the cell (Figure \ref{Fig:high_cipro}B).
 
-%% We also see a strong accumulation of RecA filaments (RecA foci seem to be transient and their number decreases over time)
+%% We see a strong accumulation of RecA filaments (RecA foci seem to be transient and their number decreases over time)
 Simultaneously with the increase in the number of long-lived DNA-bound RecB, RecA filaments became visible in a large number of cells at the higher ciprofloxacin concentrations (Figure \ref{Fig:high_cipro}C). Although the proportion of cells that contained RecA filaments was initially low under all ciprofloxacin concentrations ($<$20\%), after one hour of exposure the proportion of cells that contained a RecA filament had increased to $\sim$40\% at 20 ng/mL ciprofloxacin, and $\sim$60\% at 30 ng/mL (Figure \ref{Fig:high_cipro}D). RecA foci on the other hand seemed to form quickly following ciprofloxacin exposure (present in $\sim$40\% of the cells after 15 min of exposure to 30 ng/mL ciprofloxacin) and come back to endogenous damage level after $\sim$1 hour. Taken together, these results show that RecA foci are transient structures in the repair process that do not accumulate under high DNA damage, whereas RecA filaments do accumulate, presumably when the homologous sequence cannot be found.
-
-%% Conclude: there are two regimes of DNA repair for ciprofloxacin-induced damage:
-%% 1. Sub-lethal cipro concentrations, where repair structures are formed then disappear as damage gets repaired
-%% 2. Lethal concentrations of cipro, where repair structures are formed and accumulate over time while the cell fails to repair its DNA
-We observe two regimes of DNA repair after ciprofloxacin exposure. At sub-MIC ciprofloxacin concentrations (0, 3, 10 ng/mL), repair structures such as RecB spots and RecA filaments form transiently and disappear as the damage gets repaired. At higher ciprofloxacin concentrations (20, 30 ng/mL), the DNA damage caused is more extensive, and repair structures are formed and accumulate over time while the cell fails to repair its DNA, ultimately leading to cell death.
-
-% Part 4: Nucleoid centring upon ciprofloxacin exposure
-\subsection*{Ciprofloxacin induces centring of the bacterial nucleoid}
-
-\begin{figure*}[htbp]
-    \centering
-    \includegraphics[width=.8\textwidth]{Figures/Fig4_nucleoid.pdf}
-    \caption{}
-    \label{Fig:nucleoid}
-\end{figure*}
 
 %% We imaged nucleoid and RecB in the same experiment
 %% We observe the effect of ciprofloxacin exposure on Nucleoid position
 %% (fraction of cell occupied by nucleoid in SI)
 
-%% We correlate Nucleoid and RecB position and find that they are correlated
-%% Interpretation: RecB spot centring is due to nucleoid centring (not obvious: link to DSB rate, explain it happens after several rounds of DSBs)
+%% Nucleoid and RecB position are correlated
+%% Interpretation: RecB spot centring is due to nucleoid centring (not obvious: link to RecB recruitment rate, explain it happens after several rounds of DSBs)
 
+%% Conclude: there are two regimes of DNA repair for ciprofloxacin-induced damage:
+%% 1. Sub-lethal cipro concentrations, where repair structures are formed then disappear as damage gets repaired
+%% 2. Lethal concentrations of cipro, where repair structures are formed and accumulate over time while the cell fails to repair its DNA
+% TO BE CHANGED (this could be part of a wider conclusion)
+We observe two regimes of DNA repair after ciprofloxacin exposure. At sub-MIC ciprofloxacin concentrations (0, 3, 10 ng/mL), repair structures such as RecB spots and RecA filaments form transiently and disappear as the damage gets repaired. At higher ciprofloxacin concentrations (20, 30 ng/mL), the DNA damage caused is more extensive, and repair structures are formed and accumulate over time while the cell fails to repair its DNA, ultimately leading to cell death.
 
-% Part 5: Mutants in the repair pathway
+% Part 4: Mutants in the repair pathway
 \subsection*{RecB dissociation depends on RecA loading}
 
 \begin{figure*}[htbp]
