Removed double-mutant data

--- a/Notebooks/3_Mutants/RecB_dissociation.ipynb
+++ b/Notebooks/3_Mutants/RecB_dissociation.ipynb
@@ -76,17 +76,13 @@
     "                            '230126_DT21', '230919_2', '230920_2', '240606_1', '240606_3',\n",
     "                            '230118_DT23', '230720_1', '230720_2', '230726_cipro30', '230824_1', '230829_1', '230201_DT23', '230504_2sec', '230718_2sec', '240424_2', '240612_2',\n",
     "                            '221222_cipro30ngmL', '230802_DT22', '230808_DT22', '230914_1', '240424_4', '240612_4',\n",
-    "                            '230802_DT21', '230913_2', '230914_2', '240606_2', '240606_4',\n",
-    "                            '240116_1', '240116_2', '240116_3',\n",
-    "                            '240117_1', '240117_2', '240117_3', '240117_4'],\n",
+    "                            '230802_DT21', '230913_2', '230914_2', '240606_2', '240606_4'],\n",
     "                    groups=['WT, 0', 'WT, 0', 'WT, 0', 'WT, 0', 'WT, 0', 'WT, 0', 'WT, 0',\n",
     "                            'ΔrecA, 0', 'ΔrecA, 0', 'ΔrecA, 0', 'ΔrecA, 0',\n",
     "                            'RecB1080, 0', 'RecB1080, 0', 'RecB1080, 0', 'RecB1080, 0', 'RecB1080, 0',\n",
     "                            'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL',\n",
     "                            'ΔrecA, 30 ng/mL', 'ΔrecA, 30 ng/mL', 'ΔrecA, 30 ng/mL', 'ΔrecA, 30 ng/mL', 'ΔrecA, 30 ng/mL', 'ΔrecA, 30 ng/mL',\n",
-    "                            'RecB1080, 30 ng/mL', 'RecB1080, 30 ng/mL', 'RecB1080, 30 ng/mL', 'RecB1080, 30 ng/mL', 'RecB1080, 30 ng/mL',\n",
-    "                            'RecB1080-ΔrecA, 0', 'RecB1080-ΔrecA, 0', 'RecB1080-ΔrecA, 0',\n",
-    "                            'RecB1080-ΔrecA, 30 ng/mL', 'RecB1080-ΔrecA, 30 ng/mL', 'RecB1080-ΔrecA, 30 ng/mL', 'RecB1080-ΔrecA, 30 ng/mL'],\n",
+    "                            'RecB1080, 30 ng/mL', 'RecB1080, 30 ng/mL', 'RecB1080, 30 ng/mL', 'RecB1080, 30 ng/mL', 'RecB1080, 30 ng/mL'],\n",
     "                    filters={'all':'Frame < 50'},\n",
     "                    metadata='DateTime',\n",
     "                    rename_objects={'Spot_detection':'RecB_spots'},\n",
@@ -268,7 +264,7 @@
     "    .add(so.Line(linestyle='--', color='darkgreen', alpha=0.7), so.Agg(), y='Fit_fast', legend=False)\n",
     "    .add(so.Line(linestyle='--', color='fuchsia', alpha=0.7), so.Agg(), y='Fit_slow', legend=False)\n",
     "    .limit(x=(0, 30), y=(None, None))\n",
-    "    .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick', 'mediumorchid']))\n",
+    "    .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick']))\n",
     "    .label(x=\"Spot lifetime (sec)\", y=\"Probability\", color='')\n",
     "    # .save(loc='D:\\DanielThedie\\Python\\RecB_article\\SI_Figures\\Mutants_RecB_fits.pdf', format='pdf', bbox_inches='tight')\n",
     ")"
@@ -316,9 +312,9 @@
     "    # .layout(size=(10,6))\n",
     "    .add(so.Bar(), so.Agg('mean'), so.Dodge(by=['alpha']))\n",
     "    .add(so.Dots(color='k', marker='.', fillalpha=1), so.Jitter(), so.Dodge(by=['alpha']), legend=False)\n",
-    "    .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick', 'mediumorchid'],\n",
-    "                            order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080-ΔrecA']),\n",
-    "           x=so.Nominal(order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080-ΔrecA']))\n",
+    "    .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick'],\n",
+    "                            order=['WT', 'ΔrecA', 'RecB1080']),\n",
+    "           x=so.Nominal(order=['WT', 'ΔrecA', 'RecB1080']))\n",
     "    .share(y=False)\n",
     "    .limit(y=(None, None))\n",
     "    .label(x=\"\", y=\"Proportion of spots (%)\", color='', title='Proportion of very long-lived spots (> 50 sec)', alpha='Ciprofloxacin')\n",
@@ -608,7 +604,7 @@
     "      .reset_index()\n",
     "      .assign(Strain=lambda df: df.Strain\n",
     "                          .astype('category')\n",
-    "                          .cat.set_categories(['WT', 'ΔrecA', 'RecB1080', 'RecB1080-ΔrecA'], ordered=True))\n",
+    "                          .cat.set_categories(['WT', 'ΔrecA', 'RecB1080'], ordered=True))\n",
     "      .sort_values('Strain')\n",
     "      .set_index(['Strain','Cipro','Rate_type'])\n",
     "      )\n",
@@ -640,7 +636,7 @@
    ],
    "source": [
     "df = (lifetimes_biexp\n",
-    "      .replace({'Fast':'Short', 'Slow':'Long', 'RecB1080-ΔrecA':'RecB1080\\nΔrecA'})\n",
+    "      .replace({'Fast':'Short', 'Slow':'Long'})\n",
     "      .query('Parameter == \"Lifetime\"  and Rate_type == \"Long\"')\n",
     "      )\n",
     "\n",
@@ -650,9 +646,9 @@
     "    .facet(col='Cipro')\n",
     "    .add(so.Bar(), so.Agg('mean'), legend=False)\n",
     "    .add(so.Dots(marker='.', color='k', fillalpha=1), so.Jitter(), legend=False)\n",
-    "    .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick', 'mediumorchid'],\n",
-    "                            order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080\\nΔrecA']),\n",
-    "           x=so.Nominal(order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080\\nΔrecA'])\n",
+    "    .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick'],\n",
+    "                            order=['WT', 'ΔrecA', 'RecB1080']),\n",
+    "           x=so.Nominal(order=['WT', 'ΔrecA', 'RecB1080'])\n",
     "           )\n",
     "    .share(y='row')\n",
     "    .limit(y=(None, None))\n",
@@ -749,7 +745,7 @@
     "    .add(so.Bars(), so.Agg(), y='proportion', legend=False)\n",
     "    .add(so.Line(color='k'), so.Agg(), y='Fit', legend=False)\n",
     "    .limit(x=(0, 99), y=(None, 0.01))\n",
-    "    .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick', 'mediumorchid']))\n",
+    "    .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick']))\n",
     "    .label(x=\"Spot lifetime (sec)\", y=\"Probability\", color='', row='{}'.format)\n",
     ")"
    ]
@@ -855,7 +851,6 @@
    "source": [
     "df = (triexp_fit\n",
     "      .parameters\n",
-    "      .replace({'RecB1080-ΔrecA':'RecB1080\\nΔrecA'})\n",
     "      .query(\"Parameter == 'Rate_3'\")\n",
     "      )\n",
     "\n",
@@ -865,9 +860,9 @@
     "    .facet(col='Cipro')\n",
     "    .add(so.Bar(), so.Agg('mean'), legend=False)\n",
     "    .add(so.Dots(marker='.', color='k', fillalpha=1), so.Jitter(), legend=False)\n",
-    "    .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick', 'mediumorchid'],\n",
-    "                            order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080\\nΔrecA']),\n",
-    "           x=so.Nominal(order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080\\nΔrecA'])\n",
+    "    .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick'],\n",
+    "                            order=['WT', 'ΔrecA', 'RecB1080']),\n",
+    "           x=so.Nominal(order=['WT', 'ΔrecA', 'RecB1080'])\n",
     "           )\n",
     "    .share(y='row')\n",
     "    .limit(y=(None, None))\n",
@@ -1229,7 +1224,7 @@
     "      .reset_index()\n",
     "      .assign(Strain=lambda df: df.Strain\n",
     "                          .astype('category')\n",
-    "                          .cat.set_categories(['WT', 'ΔrecA', 'RecB1080', 'RecB1080-ΔrecA'], ordered=True))\n",
+    "                          .cat.set_categories(['WT', 'ΔrecA', 'RecB1080'], ordered=True))\n",
     "      .sort_values('Strain')\n",
     "      .set_index(['Strain','Cipro','Rate_type'])\n",
     "      )\n",
@@ -1268,7 +1263,7 @@
    ],
    "source": [
     "df = (lifetimes_triexp\n",
-    "      .replace({'Fast':'Short', 'Slow':'Long', 'RecB1080-ΔrecA':'RecB1080\\nΔrecA'})\n",
+    "      .replace({'Fast':'Short', 'Slow':'Long'})\n",
     "      .query('Parameter == \"Lifetime\"  and Rate_type == \"Long\"')\n",
     "      )\n",
     "\n",
@@ -1278,9 +1273,9 @@
     "    .facet(col='Cipro')\n",
     "    .add(so.Bar(), so.Agg('mean'), legend=False)\n",
     "    .add(so.Dots(marker='.', color='k', fillalpha=1), so.Jitter(), legend=False)\n",
-    "    .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick', 'mediumorchid'],\n",
-    "                            order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080\\nΔrecA']),\n",
-    "           x=so.Nominal(order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080\\nΔrecA'])\n",
+    "    .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick'],\n",
+    "                            order=['WT', 'ΔrecA', 'RecB1080']),\n",
+    "           x=so.Nominal(order=['WT', 'ΔrecA', 'RecB1080'])\n",
     "           )\n",
     "    .share(y='row')\n",
     "    .limit(y=(None, None))\n",
@@ -1369,12 +1364,12 @@
     "\n",
     "(\n",
     " so.Plot(df, x='Time_min_bin', y='norm_count', color='Strain', alpha='Cipro')\n",
-    " .layout(size=(12, 4))\n",
-    " .facet(col='Strain', order={'col':['WT', 'ΔrecA', 'RecB1080', 'RecB1080-ΔrecA']})\n",
+    " .layout(size=(10, 4))\n",
+    " .facet(col='Strain', order={'col':['WT', 'ΔrecA', 'RecB1080']})\n",
     " .add(so.Bar(), so.Agg(), so.Dodge(by=['alpha']))\n",
     " .add(so.Dots(color='k', marker='.', fillalpha=1), so.Jitter(), so.Dodge(by=['alpha']), legend=False)\n",
     " .scale(alpha=so.Nominal(),\n",
-    "        color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick', 'mediumorchid'], order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080-ΔrecA']),\n",
+    "        color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick'], order=['WT', 'ΔrecA', 'RecB1080']),\n",
     "        x=so.Continuous().tick(every=15)\n",
     "        )\n",
     " .share(y=True)\n",
@@ -1437,7 +1432,6 @@
     "              norm_count=lambda df: df.norm_count / df.nCells\n",
     "              )\n",
     "      .query('long_spot == \"Long\"')\n",
-    "      .replace({'RecB1080-ΔrecA':'RecB1080\\nΔrecA'})\n",
     "      )\n",
     "\n",
     "(\n",
@@ -1446,8 +1440,8 @@
     " .facet(col='Cipro')\n",
     " .add(so.Bar(), so.Agg('mean'), legend=False)\n",
     " .add(so.Dots(color='k', marker='.', fillalpha=1), so.Jitter(), legend=False)\n",
-    " .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick', 'mediumorchid'], order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080\\nΔrecA']),\n",
-    "        x=so.Nominal(order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080\\nΔrecA'])\n",
+    " .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick'], order=['WT', 'ΔrecA', 'RecB1080']),\n",
+    "        x=so.Nominal(order=['WT', 'ΔrecA', 'RecB1080'])\n",
     "        )\n",
     " .share(y=True)\n",
     " .limit(x=(None, None), y=(None, None))\n",
@@ -1629,7 +1623,7 @@
     "display(df\n",
     "        .assign(Strain=lambda df: df.Strain\n",
     "                                   .astype('category')\n",
-    "                                   .cat.set_categories(['WT', 'ΔrecA', 'RecB1080', 'RecB1080-ΔrecA'], ordered=True))\n",
+    "                                   .cat.set_categories(['WT', 'ΔrecA', 'RecB1080'], ordered=True))\n",
     "        .sort_values('Strain')\n",
     "        .groupby(['Strain', 'Cipro'], observed=True)\n",
     "        .agg({'DSB_rate':['mean', 'std']})\n",
@@ -1641,8 +1635,8 @@
     "    .layout(size=(8,5))\n",
     "    .add(so.Bar(), so.Agg(), so.Dodge(by=['alpha']))\n",
     "    .add(so.Dots(color='k', fillalpha=1, marker='.'), so.Jitter(), so.Dodge(by=['alpha']), legend=False)\n",
-    "    .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick', 'mediumorchid'], order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080-ΔrecA']),\n",
-    "           x=so.Nominal(order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080-ΔrecA'])\n",
+    "    .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick'], order=['WT', 'ΔrecA', 'RecB1080']),\n",
+    "           x=so.Nominal(order=['WT', 'ΔrecA', 'RecB1080'])\n",
     "           )\n",
     "    .share(y=False)\n",
     "    .limit(y=(0, None))\n",
@@ -1826,7 +1820,7 @@
     "display(df\n",
     "        .assign(Strain=lambda df: df.Strain\n",
     "                                   .astype('category')\n",
-    "                                   .cat.set_categories(['WT', 'ΔrecA', 'RecB1080', 'RecB1080-ΔrecA'], ordered=True))\n",
+    "                                   .cat.set_categories(['WT', 'ΔrecA', 'RecB1080'], ordered=True))\n",
     "        .sort_values('Strain')\n",
     "        .groupby(['Strain', 'Cipro'], observed=True)\n",
     "        .agg({'DSB_rate':['mean', 'std']})\n",
@@ -1838,8 +1832,8 @@
     "    .layout(size=(8,5))\n",
     "    .add(so.Bar(), so.Agg(), so.Dodge(by=['alpha']))\n",
     "    .add(so.Dots(color='k', fillalpha=1, marker='.'), so.Jitter(), so.Dodge(by=['alpha']), legend=False)\n",
-    "    .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick', 'mediumorchid'], order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080-ΔrecA']),\n",
-    "           x=so.Nominal(order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080-ΔrecA'])\n",
+    "    .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick'], order=['WT', 'ΔrecA', 'RecB1080']),\n",
+    "           x=so.Nominal(order=['WT', 'ΔrecA', 'RecB1080'])\n",
     "           )\n",
     "    .share(y=False)\n",
     "    .limit(y=(0, None))\n",
@@ -1901,7 +1895,7 @@
     "      )\n",
     "\n",
     "# Initialize the FacetGrid object\n",
-    "g = sns.FacetGrid(df, row=\"Time_min_bin\", col='Group', hue=\"Group\", aspect=6, height=.5, palette=['cornflowerblue', 'sandybrown', 'firebrick', 'mediumorchid'])\n",
+    "g = sns.FacetGrid(df, row=\"Time_min_bin\", col='Group', hue=\"Group\", aspect=6, height=.5, palette=['cornflowerblue', 'sandybrown', 'firebrick'])\n",
     "g.map(sns.kdeplot, \"midCellDist\",\n",
     "      bw_adjust=1.5, clip_on=False,\n",
     "      fill=True, alpha=1, linewidth=1.5)\n",
